<resources>
    <string name="app_name">dubnabus</string>
    <string name="schedule">SCHEDULE</string>
    <string name="map">MAP</string>
    <string name="about">О приложении</string>
    <string name="toolbar_main">РАСПИСАНИЕ АВТОБУСОВ \n г. Дубна</string>
    <string name="title">Title</string>
    <string name="arrival_time">Время прибытия:</string>
    <string name="station">Остановка</string>
    <string name="number_bus">Автобус</string>
    <string name="day_of_week">Дни недели</string>
    <string name="ok">OK</string>
</resources>
