<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainscreen_background" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorOrange"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/DarkToolbar">

        <TextView
            android:id="@+id/text_toolbar_title"
            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/toolbar_main" />

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button_schedule"
        android:layout_width="150dp"
        android:layout_height="107dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/schedule"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_border_for_buttons"
        app:layout_constraintEnd_toStartOf="@+id/guideline_central_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_up_border_for_buttons"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="150dp"
        android:layout_height="107dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_border_for_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_central_divider"
        app:layout_constraintTop_toTopOf="@+id/guideline_up_border_for_buttons"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_up_border_for_buttons"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_down_border_for_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="387dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_central_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

</android.support.constraint.ConstraintLayout>